# geopython-2023

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: constraints.txt  cron.yaml  main.yaml  triggered.yaml
docs/: project_specific_setup.md  using_poetry.md
geopython/: __init__.py  script.py  sharepoint.py  utils.py
tests/: __init__.py  test_geopython.py  test_geopython_2023.py
